# auto-rest

./: .gitignore  Cargo.toml  Rocket.toml
frontend/: angular.json  package.json  tsconfig.json
frontend/src/app/: app.component.css  app.component.html  app.module.ts  rest.service.ts
frontend/src/app/om_admin/: om_admin-add.component.ts  om_admin-list.component.ts  om_admin.ts
frontend/src/app/om_environment/: om_environment.component.ts
frontend/src/app/om_server/: om_server-add.component.ts  om_server-list.component.ts  om_server.component.ts
frontend/src/app/product/: product.component.ts
frontend/src/app/product-add/: product-add.component.html  product-add.component.ts
frontend/src/app/product-detail/: product-detail.component.html  product-detail.component.ts
frontend/src/app/product-edit/: product-edit.component.html  product-edit.component.ts
frontend/src/app/utils/: option.ts
src/: error.rs  main.rs  prep.rs
src/prep/: arc.rs  it.rs  mod.rs  pooled_connection.rs  rc.rs
src/prep.unused/: arc.rs  it.rs  rc.rs
