[package]
name = "auto_rest"
version = "0.1.0"
authors = [ "jsen- <max.enhanced@gmail.com>" ]
edition = "2018"

[dependencies]
serde = "1.0.90"
serde_json = "1.0.39"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
rust-embed = "4.3.0"

[dependencies.rusqlite]
version = "0.14.0"
features = [ "bundled" ]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["databases", "sqlite_pool", "json"]

# [patch.crates-io]
# rusqlite = { path="rusqlite" }

[replace]
"rusqlite:0.14.0" = { path = "rusqlite" }
